--- a/src/pages/Dashboard/components/MobileNavBar/index.scss
+++ b/src/pages/Dashboard/components/MobileNavBar/index.scss
@@ -1,27 +1,39 @@
-.desktop-view {
+.mobile-view {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100px;
-  color: #ffffff;
+  flex-direction: column;
+  // align-items: center;
+  background: #ffffff;
+  z-index: 2;
   position: fixed;
-  z-index: 1;
-  box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.04);
-  padding: 0 30px;
-  gap: 30px;
-  background-color: #ffffff;
+  width: 100%;
+  min-height: 100vh;
+  // overflow: auto;
+  padding: 50px 40px 20px;
+  box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.09);
+  transition: 500ms ease-in-out;
+  transform: translateX(-100%);
 
-  .logo-container {
-    max-width: 144px;
-    width: 100%;
-    max-height: 30px;
-    height: 100%;
+  .x-container {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 40px;
+    cursor: pointer;
 
-    img {
+    .x-line {
+      position: absolute;
       width: 100%;
-      height: 100%;
-      object-fit: contain;
+      height: 3px;
+      background-color: #213f7d;
+      transform-origin: center;
+    }
+
+    .x-line:nth-child(1) {
+      transform: rotate(45deg);
+    }
+
+    .x-line:nth-child(2) {
+      transform: rotate(-45deg);
     }
   }
 
@@ -30,10 +42,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     height: 40px;
-
-    @media (max-width: 800px) {
-      display: none;
-    }
+    margin-bottom: 30px;
 
     input {
       padding: 12px 26px;
@@ -60,13 +69,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     gap: 40px;
-
-    @media (max-width: 800px) {
-      display: none;
-    }
 
     .docs {
       font-size: 16px;
@@ -85,7 +90,7 @@
 
     .user-details {
       display: flex;
-      justify-content: center;
+      // justify-content: center;
       align-items: center;
       gap: 10px;
 
@@ -112,25 +117,9 @@
       }
     }
   }
+}
 
-  .hamburger {
-    display: none;
-
-    @media (max-width: 800px) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 30px;
-      height: 20px;
-      cursor: pointer;
-      .line {
-        width: 100%;
-        height: 3px;
-        background-color: #213f7d;
-        margin: 2px 0;
-        transition: transform 0.3s ease;
-      }
-    }
-  }
+.mobile-view.show {
+  transform: translateX(0%);
+  transition: 500ms ease-in-out;
 }
