--- a/src/pages/Dashboard/components/MobileNavBar/component/MobileSidebar/index.scss
+++ b/src/pages/Dashboard/components/MobileNavBar/component/MobileSidebar/index.scss
@@ -1,12 +1,7 @@
-.sidebar {
-  width: 283px;
-  background: #ffffff;
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.04);
+.mobile-sidebar {
+  width: 100%;
+  background: inherit;
   padding: 39px 0;
-
-  @media (max-width: 800px) {
-    display: none;
-  }
 
   .switch-org {
     display: flex;
