--- a/src/pages/Dashboard/components/MobileNavBar/index.scss
+++ b/src/pages/Dashboard/components/MobileNavBar/index.scss
@@ -4,11 +4,10 @@
   // align-items: center;
   background: #ffffff;
   z-index: 2;
-  position: fixed;
+  position: absolute;
   width: 100%;
   min-height: 100vh;
-  // overflow: auto;
-  padding: 50px 40px 20px;
+  padding: 100px 0 20px;
   box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.09);
   transition: 500ms ease-in-out;
   transform: translateX(-100%);
@@ -18,6 +17,7 @@
     height: 40px;
     position: absolute;
     right: 40px;
+    top: 60px;
     cursor: pointer;
 
     .x-line {
@@ -38,13 +38,13 @@
   }
 
   .search {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    display: grid;
+    grid-template-columns: 5fr 1fr;
     height: 40px;
-    margin-bottom: 30px;
+    margin: 0 auto 30px;
 
     input {
+      width: 100%;
       padding: 12px 26px;
       border-top-left-radius: 8px;
       border-bottom-left-radius: 8px;
@@ -69,7 +69,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    // justify-content: center;
+    justify-content: center;
     align-items: center;
     gap: 40px;
 
