--- a/src/pages/Dashboard/Outlets/User/index.scss
+++ b/src/pages/Dashboard/Outlets/User/index.scss
@@ -1,12 +1,72 @@
 .user {
   background: #fbfbfb;
-  padding: 60px;
+  padding: 60px 40px;
+  width: 100%;
+  min-height: 100vh;
+  @media (max-width: 800px) {
+    padding: 60px 30px;
+  }
 
   .user-content {
     h1 {
       color: #213f7d;
       font-weight: 500;
       font-size: 24px;
+    }
+
+    .user-container {
+      margin-top: 40px;
+      display: grid;
+      gap: 26px;
+      grid-template-columns: repeat(4, 1fr);
+      
+      @media (max-width: 1300px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      @media (max-width: 1200px) {
+        grid-template-columns: repeat(2, 1fr);
+        place-items: center;
+      }
+      @media (max-width: 880px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+      @media (max-width: 800px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media (max-width: 560px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+
+      .users {
+        max-width: 240px;
+        width: 100%;
+        height: 160px;
+        border-radius: 4px;
+        border: 1px solid rgba(33, 63, 125, 0.06);
+        box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
+        background: #ffffff;
+        padding: 20px 30px;
+
+        img {
+          margin-bottom: 14px;
+        }
+
+        h1 {
+          text-transform: uppercase;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 16px;
+          color: #545f7d;
+          margin-bottom: 12px;
+        }
+
+        p {
+          font-weight: 600;
+          font-size: 24px;
+          line-height: 28px;
+          color: #213f7d;
+        }
+      }
     }
   }
 }
