--- a/src/pages/Dashboard/Outlets/User/components/Table/index.scss
+++ b/src/pages/Dashboard/Outlets/User/components/Table/index.scss
@@ -14,6 +14,7 @@
     width: 100%;
 
     th {
+      padding: 0 20px 0 0 ;
       p {
         text-transform: uppercase;
         font-size: 12px;
