--- a/src/pages/Dashboard/Outlets/User/components/TableData/index.scss
+++ b/src/pages/Dashboard/Outlets/User/components/TableData/index.scss
@@ -1,7 +1,8 @@
 .data {
   position: relative;
   td {
-    padding: 20px 0;
+    width: 100%;
+    padding: 20px 10px 20px 0;
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
