--- a/src/pages/Dashboard/components/MobileNavBar/index.scss
+++ b/src/pages/Dashboard/components/MobileNavBar/index.scss
@@ -5,13 +5,16 @@
   background: #ffffff;
   z-index: 2;
   position: absolute;
-  width: 100%;
+  top: 0;
+  width: calc(100% + 17px );
   height: 100vh;
   padding: 100px 0 20px;
   box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.09);
   transition: 500ms ease-in-out;
-  transform: translateX(-100%);
-  overflow-y: scroll;
+  transform: translateX(-110%);
+  overflow-y:auto;
+  margin: 0 -30px;
+  
 
   .x-container {
     width: 40px;
