--- a/src/pages/Dashboard/Outlets/User/components/Table/index.scss
+++ b/src/pages/Dashboard/Outlets/User/components/Table/index.scss
@@ -12,21 +12,24 @@
 
   table {
     width: 100%;
+    tr {
+      position: relative;
 
-    th {
-      padding: 0 20px 0 0 ;
-      p {
-        text-transform: uppercase;
-        font-size: 12px;
-        font-weight: 600;
-        line-height: 14px;
-        color: #545f7d;
-        display: flex;
-        align-items: center;
-        gap: 10px;
+      th {
+        padding: 0 20px 0 0;
+        p {
+          text-transform: uppercase;
+          font-size: 12px;
+          font-weight: 600;
+          line-height: 14px;
+          color: #545f7d;
+          display: flex;
+          align-items: center;
+          gap: 10px;
 
-        img {
-          cursor: pointer;
+          img {
+            cursor: pointer;
+          }
         }
       }
     }
