--- a/src/pages/Dashboard/Outlets/User/components/FilterDropdown/index.scss
+++ b/src/pages/Dashboard/Outlets/User/components/FilterDropdown/index.scss
@@ -11,6 +11,14 @@
   .form {
     padding: 30px 20px;
 
+    p {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 16px;
+      color: #545f7d;
+      text-transform: capitalize;
+    }
+
     input,
     select {
       width: 100%;
